--- a/src/styles/skeleton.css
+++ b/src/styles/skeleton.css
@@ -9,7 +9,7 @@
 }
 
 .skeleton-page-wrapper {
-  overflow-x: hidden;
+  overflow-x: clip;
   background-color: #fff;
   width: 100%;
 }
